@@ -231,8 +231,9 @@ void _gdk_colormap_real_destroy (GdkColormap *colormap);
 void _gdk_cursor_destroy (GdkCursor *cursor);
 
 extern GdkArgDesc _gdk_windowing_args[];
-void         _gdk_windowing_init                   (void);
-void         _gdk_windowing_set_default_display    (GdkDisplay *display);
+void     _gdk_windowing_init                    (gint       *argc,
+                                                 gchar    ***argv);
+void     _gdk_windowing_set_default_display     (GdkDisplay *display);
 
 void     _gdk_windowing_window_get_offsets      (GdkWindow  *window,
 						 gint       *x_offset,
